--- a/css/global.css
+++ b/css/global.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'My Lucida';
     src: url('../font/LucidaGrande.ttf');
-    font-style: normal; 
+    font-style: normal;
     font-weight: bold;
 }
 
@@ -10,7 +10,7 @@
 }
 
 body {
-    background: linear-gradient(to bottom, #efefef, white) no-repeat;
+    background: linear-gradient(to bottom, #ffffff, white) no-repeat;
 }
 
 a {
@@ -60,7 +60,7 @@ h3 {
 }
 
 nav ul li a { 
-    font-size: 14px;
+    font-size: 1em;
     font-weight: normal;
     color: #828c92;
 }
@@ -85,14 +85,14 @@ nav ul li:last-child {
 
 h1 {
     color: #4b5c66;
-    font-size: 24px;
+    font-size: 1.7em;
     font-weight: normal;
     margin: 0 0 8px 0;
 }
 
 .name p { 
     color: #a0aab1;
-    font-size: 12px;
+    font-size: 0.85em;
 }
 
 .name p img { 
@@ -102,7 +102,7 @@ h1 {
 
 .stats-links {
     color: #4b5c66;
-    font-size: 12px;
+    font-size: 0.85em;
     padding: 15px 0px 10px 0px;
     border-bottom: 1px solid #e1e6e9;
     margin-bottom: 20px;
@@ -117,7 +117,7 @@ h1 {
 }
 
 .stats-links a {
-    font-size: 12px;
+    font-size: 0.85em;
     font-weight: normal;
     color: #4b5c66;
 }
@@ -137,7 +137,7 @@ input.search {
     box-shadow: none;
     height: 28px;
     width: 100%;
-    font-size: 13px;
+    font-size: 0.93em;
     padding: 3px 6px 3px 25px;
     border: 1px solid #d0dde9;
     margin: 0;
@@ -151,7 +151,7 @@ input.submit {
 }
 
 .station {
-    font-size: 12px;
+    font-size: 0.85em
     color: #008fd5;
     border-radius: 5px;
     border: 1px solid #b8c3c9;
@@ -170,7 +170,7 @@ input.submit {
 
 
 #albums article {
-    font-size: 13px;
+    font-size: 0.93em;
     color: #89949b;
     margin: 10px 0;
 }
