--- a/css/global.css
+++ b/css/global.css
@@ -151,7 +151,7 @@ input.submit {
 }
 
 .station {
-    font-size: 0.85em
+    font-size: 0.85em;
     color: #008fd5;
     border-radius: 5px;
     border: 1px solid #b8c3c9;
